# pyspark-parquet-cloud

./: .gitignore  LICENSE  README.md  amazon_sales.py  download_dataset.py  eda.ipynb  pyproject.toml
iac/: .terraform.lock.hcl  emr.tf  iam.tf  main.tf  s3.tf  security_group.tf  set_env_vars.sh  vpc.tf
